--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -83,7 +83,7 @@
 
     <!-- Button to go to the data request page -->
     <form action="{{ url_for('index') }}" method="get">
-        <button type="submit" class="custom-button">Go to Data Request Page</button>
+        <button type="submit" class="custom-button">Go back to Data Request Page</button>
     </form>
 
 </body>
